--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -8,30 +8,45 @@ env:
   PROJECT_PATH: Ikaros
 
 jobs:
-  export-windows:
-    name: Windows Export
-    runs-on: ubuntu-20.04
-    container:
-      image: barichello/godot-ci:4.3
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          lfs: true
-      - name: Setup
-        run: |
-          mkdir -v -p ~/.local/share/godot/export_templates/
-          mkdir -v -p ~/.config/
-          mv /root/.config/godot ~/.config/godot
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
-      - name: Windows Build
-        run: |
-          mkdir -v -p build/windows
-          EXPORT_DIR="$(readlink -f build)"
-          cd $PROJECT_PATH
-          godot --headless --verbose --export-release "Windows Desktop" "$EXPORT_DIR/windows/$EXPORT_NAME.exe"
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows
-          path: build/windows
+    check-scripts:
+        name: Check scripts
+        runs-on: ubuntu-20.04
+        container:
+            image: barichello/godot-ci:4.3
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+              with:
+                lfs: true
+            - name: Check scripts
+              run: |
+                cd $PROJECT_PATH
+                find . -type f -name "*.gd" -exec godot --headless --verbose --check-only --script {} \;
+
+#   export-windows:
+#     name: Windows Export
+#     runs-on: ubuntu-20.04
+#     container:
+#       image: barichello/godot-ci:4.3
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#         with:
+#           lfs: true
+#       - name: Setup
+#         run: |
+#           mkdir -v -p ~/.local/share/godot/export_templates/
+#           mkdir -v -p ~/.config/
+#           mv /root/.config/godot ~/.config/godot
+#           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+#       - name: Windows Build
+#         run: |
+#           mkdir -v -p build/windows
+#           EXPORT_DIR="$(readlink -f build)"
+#           cd $PROJECT_PATH
+#           godot --headless --verbose --export-release "Windows Desktop" "$EXPORT_DIR/windows/$EXPORT_NAME.exe"
+#       - name: Upload Artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: windows
+#           path: build/windows
