feat: Continues checks after failure

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -5,8 +5,9 @@ jobs:
   static-checks:
     name: Static checks
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v4
       - uses: Scony/godot-gdscript-toolkit@master
-      #- run: gdformat --check Ikaros/
+      - run: gdformat --check Ikaros/
       - run: gdlint Ikaros/
