fix: Only checks the core and game folders

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Scony/godot-gdscript-toolkit@master
-      - run: gdformat --check Ikaros/
-      - run: gdlint Ikaros/
+      - run: gdformat --check Ikaros/core Ikaros/game
+      - run: gdlint Ikaros/core Ikaros/game
