fix: Uses if: always() instead of continue-on-error

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: Scony/godot-gdscript-toolkit@master
       - run: gdformat --check Ikaros/core Ikaros/game
-        continue-on-error: true
+        if: always()
       - run: gdlint Ikaros/core Ikaros/game
-        continue-on-error: true
+        if: always()
