--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -2,8 +2,8 @@ name: "godot-ci"
 on: push
 
 jobs:
-  static-checks:
-    name: Static checks
+  gdtoolkit:
+    name: gdformat & gdlint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -12,3 +12,15 @@ jobs:
         if: always()
       - run: gdlint Ikaros/core Ikaros/game
         if: always()
+  godot-check-scripts:
+    name: Check scripts
+    runs-on: ubuntu-latest
+    container:
+      image: aronand/godot-alpine:4.3
+    defaults:
+      run:
+        shell: ash {0}
+    steps:
+      - uses: actions/checkout@v4
+      # TODO: Implement the actual check once Jolt works on godot-alpine
+      - run: godot --version
