--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -26,4 +26,10 @@ jobs:
         working-directory: ./Ikaros
         run: godot --headless --quit --import
       - name: Verify engine version
-        run: godot --headless --quit --script Ikaros/scripts/verify_engine_version.gd
+        run: |
+          ENGINE_VERSION=`godot --version | grep -oP "^\d*.\d"`
+          PROJECT_ENGINE_VERSION=`grep -oP '^config\/features=PackedStringArray\("\K\d*.\d*' project.godot`
+          if [ $ENGINE_VERSION != $PROJECT_ENGINE_VERSION ]; then
+            echo "::error::Engine version used in CI ($ENGINE_VERSION) doesn't match project engine version ($PROJECT_ENGINE_VERSION). Make sure you've updated the image if you've recently upgraded the project to a new version of Godot."
+            exit 1
+          fi
