--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -31,6 +31,6 @@ jobs:
           ENGINE_VERSION=`godot --version | grep -oP "^\d*.\d"`
           PROJECT_ENGINE_VERSION=`grep -oP '^config\/features=PackedStringArray\("\K\d*.\d*' project.godot`
           if [ $ENGINE_VERSION != $PROJECT_ENGINE_VERSION ]; then
-            echo "::error::Engine version used in CI ($ENGINE_VERSION) doesn't match project engine version ($PROJECT_ENGINE_VERSION). Make sure you've updated the image if you've recently upgraded the project to a new version of Godot."
+            echo "::error title=Engine version mismatch::Engine version used in CI ($ENGINE_VERSION) doesn't match project engine version ($PROJECT_ENGINE_VERSION). Make sure you've updated the image if you've recently upgraded the project to a new version of Godot."
             exit 1
           fi
